--- a/euna.html
+++ b/euna.html
@@ -52,9 +52,9 @@
             <a class="dropdown-toggle pt-1 nav-link text-right" href="#" role="button" style="font-size: 14px" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Work</a>
 
             <div class="dropdown-menu nav-item" aria-labelledby="dropdownMenuLink">
+              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="bonfire.html">Bonfire Interactive</a>
               <a class="dropdown-item nav-item" href="questica.html">Questica</a>
-              <a class="dropdown-item nav-item" href="euna.html">Euna Solutions</a>
               <a class="dropdown-item nav-item" href="opencounter.html">OpenCounter</a>
               <a class="dropdown-item nav-item" href="masterpiece-vr.html">MasterpieceVR</a>
               <a class="dropdown-item nav-item" href="csp.html">Canadian Science Publishing</a>
@@ -77,7 +77,7 @@
     </div>
   </nav>
 
-  <section class="mx-auto pt-3" style="background-color: #EBF0FF">
+  <section class="mx-auto pt-3" style="background-color: #EBF0FF;">
     <div class="col-sm-8 col-md-10 col-lg-8 mx-auto pt-5">
       <div class="row text-center">
         <div class="text-center mx-auto">
@@ -91,19 +91,18 @@
     <div class="container center pb-5">
       <div class="pb-2">
         <h2 class="pb-0 mb-2" style="font-size: 36px;">Euna Solutions (formerly GTY)</h2>
-        <p style="font-size: 14px; font-weight: 400;">Rebranding, Template and Campaign Design</p>
+        <p style="font-size: 14px; font-weight: 400;">Design System Build | Landing Pages</p>
       </div>
       <div class="row">
         <div class="col-sm-12 col-md-8 col-xl-8">
           <p class="gray" style="font-weight: 600;">OVERVIEW</p>
-          <p class="pb-3">Previously 9 different companies, Euna Solutions delivers best-in-class solutions that keep the public sector thriving. Launched in May 2023, different public sector software companies consolidated to offer a platform of products. The big idea:
-            forward-thinking solutions that have your back.</p>
+          <p class="pb-3">Euna Solutions consolidated and rebranded in May 2023 which posed numerous design questions and challenges. I was tasked with creating a seamless and efficient Design System for Euna's Unbounce landing pages which could be used easily by the Digital and Design teams.</p>
         </div>
         <div class="col-sm-12 col-md-4 col-xl-4">
           <p class="gray" style="font-weight: 600;">ROLE</p>
           <span style="font-size: 13px;">
               <p class="font-weight-bold mb-2">Graphic Designer & Developer</p>
-              <p>User Research, Interaction, Visual Design, Front-end Web Design, Prototyping & Testing</p>
+              <p>Design System, User Interface, User Experience, Interaction, Visual Design, Front-end Web Design, Prototyping & Testing</p>
             </span>
         </div>
       </div>
@@ -116,92 +115,134 @@
     <div class="container center">
       <div class="pb-2">
         <h4 class="pb-3 font-weight-bold">Background</h4>
-        <h4 class="pb-3">I supported a massive rebrand at Euna.</h4>
-        <p>I joined Euna Solutions in 2022 prior to it's rebrand in 2023, originally with Questica (now known as Euna Budget) and worked primarily with the Budgeting & Grants business units. When the company consolidated from 9 individual business units to one, my design support grew to span multiple product lines; Procurement, Permitting, K-12, Payments, Budgeting and Grants.</p>
-        <p>I've learned so much about SaaS and marketing during my time at Euna, I've listed some of my highlights below:</p>
-        <ul>
-          <li class="pb-3"><span class="font-weight-bold">Establish design consistency.</span> Bringing visual cohesiveness to the design projects allowed the brand to communicate more clearly.</li>
-          <li class="pb-3"><span class="font-weight-bold">Learn to advocate for yourself.</span> Self-advocacy also helped me create independence and empowered me to find solutions to problems that others might not have been aware of. This meant learning to understand
-            my needs, knowing what kind of support I needed, and communicating those needs to others.</li>
-          <li class="pb-3"><span class="font-weight-bold">Know your tools inside & out.</span> It pays to learn as much as possible about the tech stack you use on a daily basis and it's capabilities. Sharing this knowledge with others helps streamlining their processes as much as your own.</li>
-          <li class="pb-3"><span class="font-weight-bold">Learn from the team.</span> Marketing is a tough environment to be in if you don't have a good grasp on the different functions. Consistent communication and learning between functions helps everyone to work more fluidly.</li>
 
+        <p>Previously 9 different companies, Euna Solutions delivers best-in-class solutions that keep the public sector thriving. Launched in May 2023, different public sector software companies consolidated to offer a platform of products. Our design team was made up of 3 people, on a Marketing team of about 40.</p>
+        <h4 class="pb-3">I designed and implemented design systems and structures.</h4>
+        <p>In addition to day-to-day graphics, I focused on designing design systems at Euna. I learned about SaaS and Marketing, during this time I was able to accomplish these key achievements:</p>
+        <ul>
+          <li class="pb-3"><span class="font-weight-bold">Designed and implemented a landing page Design System.</span> This was key in elevating Euna's new brand and bridging the Digital and Design teams.</li>
+          <li class="pb-3"><span class="font-weight-bold">Implemented a file and folder system for design.</span> This system established cohesiveness and consistency among our internal design team and could also be used by external designers.</li>
+          <li class="pb-3"><span class="font-weight-bold">Built, distributed and maintained brand libraries.</span> I built Adobe Creative Cloud libraries to be accessible by anyone with an Adobe account. This was critical in creating brand consistency with the Marketing & Comms teams.</li>
+          <li class="pb-3"><span class="font-weight-bold">Mentored and art-directed Junior Designers.</span> Providing support and art direction for Junior Designers was a new experience and strengthened my team-building skills.</li>
         </ul>
       </div>
     </div>
   </section>
 
 
-  <section class="pt-5 pb-5">
-    <div class="container center">
-        <div class="row pt-3">
-          <div class="col-sm-6">
-            <img class="img-fluid" src="img/euna/euna-2.png">
-            <p class="pt-2 text-center caption">Euna Brand Guidelines (Sam Johnston)</p>
-          </div>
-          <div class="col-sm-6">
-            <img class="img-fluid" src="img/euna/euna-cards.png">
-            <p class="pt-2 text-center caption">Events Business Cards (HH)</p>
-          </div>
-        </div>
-      </div>
-  </section>
-
-  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
+  <section class="pt-4 pb-5">
     <div class="container center">
       <div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-4.png">
-          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Budget Whitepaper (HH)</p>
-        </div>
+        <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Understanding the problem</h4>
+        <p>Rebranding Euna's landing page templates presented the opportunity to improve the current system. Up until this point, Digital was putting pages together for Design to review. That process proved to be inefficent, frustrating and disjointed which also led to brand inconsistency. This was a great a use case to implement a Design System to bridge Digital and Design, allowing the teams to work cohesively, fluidly and efficiently together.</p>
+        <p>My research encompassed:</p>
+        <ul>
+          <li>Identifying what makes a good Design System work</li>
+          <li>Knowing what can lead a Design Systems to failure</li>
+          <li>Understanding what current Design Systems are available</li>
+          <li>Learning more about Unbounce's capability and functionality</li>
+        </ul>
       </div>
     </div>
   </section>
 
-  <div class="container center pb-3">
-        <p class="pt-5">Shortly following the rebrand launch, I was tasked with creating newly branded landing page templates for Euna, to support the marketing team's efforts. Each LP category follows a particular colour path that correlates with the core Euna brand. These templates increased the digital team's turnaround time for multiple campaign landing pages (below).</p>
-    <div class="row pt-3">
-      <div class="col-sm-6">
-        <img class="img-fluid" src="img/euna/euna-1.png">
-        <p class="pt-2 text-center caption">New Euna LP Template Examples</p>
-      </div>
-      <div class="col-sm-6">
-        <img class="img-fluid" src="img/euna/euna-2.jpg">
-        <p class="pt-2 text-center caption">Events Templates Colour Pathing</p>
-      </div>
-    </div>
-    <p class="pt-4">To accompany the templates, I creating Landing Page Design Rules and an Asset Library for preformatted ready-to-use landing page graphics by category for the digital team (below).</p>
-  </div>
 
-  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
-    <div class="container center">
-      <div>
-        <div class="text-center">
-          <img class="img-fluid" src="img/euna/euna-5.png">
+    <section class="pt-4 pb-5 bg-lt-blue">
+      <div class="container center">
+        <div>
+          <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Defining system requirements</h4>
+          <p>I worked with Design to Identifying all the potential system requirements and presented these to the Digital team.</p>
+          <p>Together, we defined these key system requirements:</p>
+          <ul>
+            <li>Be easy for Design and Digital to maintain</li>
+            <li>Be accessible, efficient and easy to use for both teams</li>
+            <li>Include a library of pre-formatted graphics for Digital to use</li>
+            <li>Be accompanied by documentation in the form of Design System Rules</li>
+            <li>Ensure that each landing page category follows a colour pathing system</li>
+            <li>Follow a simple structure for easily building future page templates</li>
+          </ul>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+
+
+          <section class="pt-4">
+            <div class="container center pb-5">
+              <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Process: design mockups and testing</h4>
+
+              <div class="row">
+                  <div class="col-sm-8">
+                  <p>These are the next steps I took to at this stage:</p>
+                    <ol>
+                      <li class="pb-2">Sketch layouts, develop low-fi mockups in Illustrator</li>
+                      <li class="pb-2">Design Sync: low-fi mockups</li>
+                      <li class="pb-2">Present to Digital: hi-fi mockups</li>
+                      <li class="pb-2">Design: Build and test one mockup in Unbounce</li>
+                      <li class="pb-2">Hand to Digital: Unbounce mockup for testing and review</li>
+                      <li class="pb-2">Integrate feedback from Digital</li>
+                      <li class="pb-2">Iterate on steps 4-6 until all landing pages are complete</li>
+                    </ol>
+                  </div>
+                  <div class="col-sm-4">
+                      <img class="img-fluid" src="img/euna/euna-lo-fi.png">
+                    </div>
+                </div>
+              </div>
+            </section>
+
+
+      <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
+        <div class="container center">
+          <div class="pb-5">
+            <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Finalizing and implementation</h4>
+            <h5>Living SharePoint asset library</h5>
+            <p>A key functional component of the Design System was a living SharePoint asset library. The purpose of the library made it easy for Digital to find and use landing page assets like photos, icons and graphics. Design was responsible for maintaining this library.</p>
+            <h5>System rules and style guides</h5>
+            <p>Another component of the Design System was a Visual Guide outlining responsibilties, global and category-specific rules, colour pathing examples, locations to corresponding assets within the SharePoint asset library.</p>
+            <img class="img-fluid" src="img/euna/euna-5.png">
+            <p class="pt-0 mt-0 pb-3 text-center caption">A snapshot of the Design System Rules.</p>
+          </div>
+        </div>
+        </section>
 
 
   <section class="pt-3 pb-3">
     <div class="container center">
       <div class="pb-5">
         <h4 class="pt-5 pb-3 mb-0 font-weight-bold">Results and takeaways</h4>
-        <p>Some key takeaways from Euna's rebrand are: </p>
+        <p>Post-implementation, Design and Digital continued to sync to identify and solve any pain points. We continued to work together to improve the new system and got a lot of great feedback from the marketing team on the new Design System and landing pages.</p>
+        <p>Some key takeaways from the designing the Landing Page Design System:</p>
         <ul>
-          <li class="pb-3"><span class="font-weight-bold">Plan your work, work your plan. </span> In order to meet the deadline date for the rebrand launch, committing to a strategy and being vigilant with communication served us well.</li>
-          <li class="pb-3"><span class="font-weight-bold">Embrace change.</span> When you're working with so many projects in such a tight timeline, it's best to go with the flow and embrace the many changes that come with the territory.</li>
-          <li class="pb-3"><span class="font-weight-bold">Immerse yourelf in the process.</span> Being part of the process of building and shaping the visual identity was a huge benefit when it came time to apply the new brand.</li>
+          <li class="pb-3"><span class="font-weight-bold">End users can be internal, not just potential clients.</span> In designing this system, we were prioritizing the needs and pain points of the Design, Digital and Marketing teams as well as users visiting the landing pages. It's important to recognize the same UX principles should be applied internally and externally.</li>
+          <li class="pb-3"><span class="font-weight-bold">Introduce ongoing communication.</span> Before the Landing Page Design System was in place, Design and Digital had almost no ongoing communication other than campaign kickoffs. Introducing a bi-weekly touchpoint strengthened team efforts.</li>
+          <li class="pb-3"><span class="font-weight-bold">Testing doesn't end after development.</span> Design is a constant iteration of improving the experience for the end user. Always find ways to collect and listen to your user's feedback.</li>
         </ul>
       </div>
     </div>
   </section>
 
-  <div class="bb mb-5 pt-0"></div>
+
+  <section class="pb-4 pt-4" style="background-color: #e3e6f4;">
+    <div class="container center">
+      <h4 class="pt-5 mb-0 font-weight-bold">Euna Solutions: Other Work</h4>
+      <div>
+        <div class="text-center">
+          <img class="img-fluid" src="img/euna/euna-4.png">
+          <p class="pt-0 mt-0 pb-3 text-center caption">Euna Budget Whitepaper</p>
+        </div>
+        <div class="text-center">
+          <img class="img-fluid" src="img/euna/euna-cards.png">
+          <p class="pt-0 mt-0 pb-3 pt-3 text-center caption">Euna Business Cards</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- <div class="bb mb-5 pt-0"></div>-->
 
 
-  <section class="pb-0">
+  <section class="pb-0 pt-5">
     <div class="container">
       <p class="font-weight-bold text-center">More Projects</p>
       <div class="row pt-4 pb-2">
