--- a/about.html
+++ b/about.html
@@ -128,8 +128,7 @@
               <h1 class="text-left font-weight-light"><span style="font-weight: 300;">I</span>  <span class="intro-1" style="font-weight:800;">research</span>, <span class="intro-2" style="font-weight:800;">design</span> & <span class="intro-3" style="font-weight:800;">illustrate</span>.</h1>
             </div>
             <div class="col-sm-6 pb-3">
-              <p>I’m <span class="intro-0">Hannah Hatherell</span>, a designer based in Ottawa, Ontario. I play a crucial role in leading, supporting and problem-solving visual and creative initiatives for marketing and communications teams. I work to create
-                engaging on-brand user experiences across all channels, from concept to execution. My goal is to drive results through visually compelling and effective design solutions.</p>
+              <p><span style="font-weight: 500;">I’m <span class="intro-0">Hannah Hatherell</span>, a visual designer based in Ottawa, Ontario.</span><br><br> I play a key role in crafting seamless user experiences and beautifully branded, story-telling designs from concept to execution. I work to solve complex problems with creative, user friendly solutions. I aim to deliver results through the implementation of visually captivating and highly effective design solutions.<br><br>Most recently, as Graphic Designer and Developer at Euna Solutions, I applied UX principles to craft top-tier marketing collateral tailored for SaaS solutions.</p>
               <ul class="list-inline mb-3">
                 <li class="list-inline-item">
                   <p class="font-weight-bold mb-3 list-inline">Let's connect > </p>
@@ -225,18 +224,18 @@
             <ol style="font-size: 12px;">
               <li style="font-weight: 600;">Sync</li>
               <p class="pb-1 mb-0"><strong>Review Objectives, Understand Scope, Gather Requirements</strong></p>
-              <p>I ask lots of questions during this stage and gather as much information as possible prior to settling into the project.</p>
+              <p>I ask lots of questions during this stage and gather as much information as possible. I like to ensure everyone is on the same page prior to ideation. </p>
               <li style="font-weight: 600;">Research & Ideate</li>
               <p class="pb-1 mb-0"><strong>Brainstorm, Document, Conceptualize</strong></p>
               <p>This is where the creative juices start flowing. I like to touch base post-ideation with the creative director/manager to ensure the work is on track before getting into the heavier lifting.</p>
               <li style="font-weight: 600;">Design</li>
               <p class="pb-1 mb-0"><strong>Wireframes, Mock Ups, Preliminary Designs</strong></p>
-              <p>Realize ideas and concepts by translating them into initial designs.</p>
+              <p>I begin to realize ideas and concepts by translating them into initial designs.</p>
               <li style="font-weight: 600;">Review</li>
               <p class="pb-1 mb-0"><strong>Present, Review and Revise</strong></p>
               <p>Iterate between stages 3 & 4 integrating feedback, revisions and communication with project stakeholders.</p>
-              <li style="font-weight: 600;">Deliver</li>
-              <p>My design process doesn't end once the work is finished and launched. I like to review the performance of the work through metrics and research, to see how I can better reach target audiences.</p>
+              <li style="font-weight: 600;">Deliver & Implement</li>
+              <p>I extend my design process beyond completion and launch, actively reviewing work performance using metrics and research to refine strategies for better engagement with target audiences.</p>
             </ol>
           </div>
         </div>
@@ -256,13 +255,13 @@
         <h3 class="pt-5 font-weight-bold">Recent Peer Feedback</h3>
         <div class="pb-4">
           <p class="caption">This peer feedback is from anonymous colleagues at Euna Solutions, January 2024.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
+          <p class="pb-3"><span style="font-weight: 500;">Hannah has done an amazing job on design tasks for programs.</span> She has strong project management skills and works together with programs managers on timelines to ensure we stay on track. She is detail-oriented
             and the quality of her work is consistently excellent. I've loved the work she's put into each design concept. During kick-off calls, Hannah's asks great questions to streamline workflows and ensure that she gathers all project information
             to ensure a successful outcome. She's also always a pleasure to work with.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things
+          <p class="pb-3"><span style="font-weight: 500;">Hannah is awesome at what she does.</span> She is incredibly responsive, whether it's answering questions or working on last minute requests. Her eye for detail is another major strength, catching the small things
             many overlook and making sure everything is perfect. She is very innovative, and her creativity makes our projects shine, setting us apart from the competition. Lastly, she consistently meets deadlines, often submitting tasks ahead of schedule.</p>
-          <p class="pb-3"><span style="font-weight: 400;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with
-            what is needed, and she sets good timelines. She also set a lot of reminders in Click Up which was great. She's also really fun to work with.</p>
+          <p class="pb-3"><span style="font-weight: 500;">Hannah is so talented.</span> Often times I would give her incredibly vague instructions, and yet somehow she would create exactly what I wanted! She's incredibly organized as well, and always on the ball with
+            what is needed, and she sets good timelines. She also set a lot of reminders in ClickUp which was great. She's also really fun to work with.</p>
         </div>
       </div>
     </div>
@@ -274,8 +273,7 @@
       <div class="row pt-3 center">
         <h3 class="pb-3 font-weight-bold">Testimonials</h3>
         <div class="pb-4">
-          <p class="pb-5"><span style="font-weight: 400;">*New testimonial coming soon!*<br>(Samantha Johnston, Manager, Creative Design at Euna Solutions)</span></p>
-          <p><span style="font-weight: 400;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time
+          <p><span style="font-weight: 500;">In 2021 Hannah has made a substantial contribution to the Marketing and Communications team.</span> Having Hannah work on our team has been seamless. I have not worked with Hannah for that long but in the time
             that I have, I have felt and seen her impact. I continue to be impressed by the work that she produces. Her attention to detail and the time she takes to inform her decisions shows her commitment to her work. Hannah has a positive attitude
             and willingness to taking on new initiatives, she is someone I trust and can rely on.</p>
           <p>Hannah has a genuine enthusiasm in her work and is very invested in contributing to our company’s success. Her dedication to her work, and creative vision makes Hannah a valuable contributor to the team.</p>
@@ -284,7 +282,7 @@
           <p class="text-right caption">Manager, Marketing and Communications at Canadian Science Publishing</p>
         </div>
         <div class="pb-4 pt-5">
-          <p style="font-weight: 400;">It’s my pleasure to recommend my former lead graphic designer, Hannah Hatherell.</p>
+          <p style="font-weight: 500;">It’s my pleasure to recommend my former Lead Graphic Designer, Hannah Hatherell.</p>
           <p>Hannah worked for me as the lead Graphic Designer at Coyle Media Group for a year. During that time, I was impressed by her overall performance, particularly in her knowledge of InDesign, Illustrator, photoshop and WordPress. Hannah consistently
             worked hard to achieve Result for our team, she was assigned with the task of designing multiple high-end magazines along with websites, print ads, digital ads and some photography.</p>
           <p>Hannah is a reliable and talented Graphic Designer and a joy to work with who doesn’t hesitate to help her co-workers. She is an excellent communicator and a pleasure to work with. I’m confident Hannah will be a great asset to your team, just
