--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <section class="pt-5 mt-5">
     <div class="container center">
       <div>
-        <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 32px; font-size: 30px; font-weight: 200;">Hello 👋 I am an experienced designer with a strategic background in marketing communications, who is passionate about improving the lives of others through design.</h5>
+        <h5 class="pt-4 mt-5 pl-4 pr-4 text-center" style="line-height: 39px; font-size: 30px; font-weight: 200;">Hello 👋 I’m an experienced visual designer with a background in marketing, who is enthusiastic about improving the lives of others through design.</h5>
         <br>
         <div class="text-center ixdf-mobile">
           <img class="w-50 pl-3 pr-3 pb-2" src="img/ixdf.png" alt="">
